# api_test_stract

./: .gitignore  README.md  meta_ads.csv  pyproject.toml
api/: __init__.py  config.py  insights_processor.py  routes.py  services.py  utils.py
tests/: __init__.py  test_insights_processor.py  test_routes.py  test_services.py  test_utils.py
