[tool.poetry]
name = "api-test-abstract"
version = "0.1.0"
description = ""
authors = ["Paulo S. Garcia <pgarciapydev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
